Set the LayoutParams for ImageView in ContactView with 16:9 ratio of its width as its height. + Resized the dummy image.

--- a/app/src/main/res/layout/activity_contact_view.xml
+++ b/app/src/main/res/layout/activity_contact_view.xml
@@ -5,6 +5,7 @@
                 tools:context="silin.tutorial.mycontacts.ContactViewActivity">
 
     <ImageView
+        android:id="@+id/contact_view_image"
         android:scaleType="fitXY"
         android:src="@drawable/freedom_tower"
         android:layout_width="match_parent"
