--- a/app/src/main/res/layout/activity_contact_view.xml
+++ b/app/src/main/res/layout/activity_contact_view.xml
@@ -4,15 +4,26 @@
                 android:layout_height="match_parent"
                 tools:context="silin.tutorial.mycontacts.ContactViewActivity">
 
-    <ImageView
-        android:id="@+id/contact_view_image"
-        android:scaleType="fitXY"
-        android:src="@drawable/freedom_tower"
+    <RelativeLayout
+        android:id="@+id/contact_view_header"
         android:layout_width="match_parent"
-        android:layout_height="200dp"/>
-    <TextView
-        android:id="@+id/contact_view_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="200dp">
+
+        <ImageView
+            android:id="@+id/contact_view_image"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scaleType="fitXY"
+            android:src="@drawable/freedom_tower"/>
+
+        <TextView
+            android:id="@+id/contact_view_name"
+            android:layout_width="wrap_content"
+            android:layout_margin="@dimen/vertical_small_margin"
+            android:textColor="@android:color/white"
+            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"/>
+    </RelativeLayout>
 
 </RelativeLayout>
