--- a/app/src/main/res/menu/menu_contact_view.xml
+++ b/app/src/main/res/menu/menu_contact_view.xml
@@ -2,8 +2,9 @@
       xmlns:app="http://schemas.android.com/apk/res-auto"
       xmlns:tools="http://schemas.android.com/tools"
       tools:context="silin.tutorial.mycontacts.ContactViewActivity">
-    <item android:id="@+id/action_settings"
-          android:title="@string/action_settings"
+    <item android:id="@+id/contact_view_edit"
+          android:title="@string/edit_contact"
+          android:icon="@android:drawable/ic_menu_edit"
           android:orderInCategory="100"
-          app:showAsAction="never"/>
+          app:showAsAction="ifRoom"/>
 </menu>
