--- a/app/src/main/res/layout/activity_contact_view.xml
+++ b/app/src/main/res/layout/activity_contact_view.xml
@@ -1,8 +1,9 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 xmlns:app="http://schemas.android.com/apk/res-auto"
                 xmlns:tools="http://schemas.android.com/tools"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:orientation="vertical"
                 tools:context="silin.tutorial.mycontacts.ContactViewActivity">
 
     <RelativeLayout
@@ -25,15 +26,21 @@
             android:layout_margin="@dimen/vertical_small_margin"
             android:textAppearance="@style/TextAppearance.AppCompat.Display1"
             android:textColor="@android:color/white"/>
+
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/contact_view_toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fitsSystemWindows="true"
+            android:minHeight="?attr/actionBarSize"
+            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>
     </RelativeLayout>
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/contact_view_toolbar"
+    <ListView
+        android:id="@+id/contact_view_fields"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:fitsSystemWindows="true"
-        android:minHeight="?attr/actionBarSize"
-        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>
+        android:layout_height="0dp"
+        android:layout_weight="100"/>
 
-</RelativeLayout>
+</LinearLayout>
