--- a/app/src/main/res/layout/activity_contact_view.xml
+++ b/app/src/main/res/layout/activity_contact_view.xml
@@ -23,7 +23,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
-            android:layout_margin="@dimen/vertical_small_margin"
+            android:layout_marginLeft="@dimen/vertical_small_margin"
             android:textAppearance="@style/TextAppearance.AppCompat.Display1"
             android:textColor="@android:color/white"/>
 
@@ -38,6 +38,8 @@
     </RelativeLayout>
 
     <ListView
+        android:paddingLeft="@dimen/vertical_small_margin"
+        android:paddingRight="@dimen/vertical_small_margin"
         android:id="@+id/contact_view_fields"
         android:layout_width="match_parent"
         android:layout_height="0dp"
