--- a/app/src/main/res/menu/menu_contact_view.xml
+++ b/app/src/main/res/menu/menu_contact_view.xml
@@ -4,7 +4,7 @@
       tools:context="silin.tutorial.mycontacts.ContactViewActivity">
     <item android:id="@+id/contact_view_edit"
           android:title="@string/edit_contact"
-          android:icon="@android:drawable/ic_menu_edit"
+          android:icon="@drawable/ic_edit"
           android:orderInCategory="100"
           app:showAsAction="ifRoom"/>
 </menu>
