--- a/app/src/main/res/layout/activity_contact_view.xml
+++ b/app/src/main/res/layout/activity_contact_view.xml
@@ -1,10 +1,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:app="http://schemas.android.com/apk/res-auto"
-                xmlns:tools="http://schemas.android.com/tools"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical"
-                tools:context="silin.tutorial.mycontacts.ContactViewActivity">
+              xmlns:app="http://schemas.android.com/apk/res-auto"
+              xmlns:tools="http://schemas.android.com/tools"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:orientation="vertical"
+              tools:context="silin.tutorial.mycontacts.ContactViewActivity">
 
     <RelativeLayout
         android:id="@+id/contact_view_header"
@@ -38,11 +38,11 @@
     </RelativeLayout>
 
     <ListView
-        android:paddingLeft="@dimen/vertical_small_margin"
-        android:paddingRight="@dimen/vertical_small_margin"
         android:id="@+id/contact_view_fields"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="100"/>
+        android:layout_weight="100"
+        android:paddingLeft="@dimen/vertical_small_margin"
+        android:paddingRight="@dimen/vertical_small_margin"/>
 
 </LinearLayout>
