--- a/app/src/main/res/layout/activity_contact_edit.xml
+++ b/app/src/main/res/layout/activity_contact_edit.xml
@@ -1,65 +1,79 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:app="http://schemas.android.com/apk/res-auto"
               xmlns:tools="http://schemas.android.com/tools"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:orientation="vertical"
-              android:paddingBottom="@dimen/activity_vertical_margin"
-              android:paddingLeft="@dimen/activity_horizontal_margin"
-              android:paddingRight="@dimen/activity_horizontal_margin"
-              android:paddingTop="@dimen/activity_vertical_margin"
               tools:context="silin.tutorial.mycontacts.ContactEditActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/name_label"
-        android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"/>
-
-    <EditText
-        android:id="@+id/contact_edit_name"
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/contact_edit_toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        />
+        android:background="?attr/colorPrimary"
+        android:minHeight="?attr/actionBarSize"
+        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>
 
     <LinearLayout
-        android:id="@+id/phonenumber_section"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_height="0dp"
+        android:layout_weight="100"
+        android:orientation="vertical"
+        android:padding="@dimen/activity_vertical_margin">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/phonenumber_label"
+            android:text="@string/name_label"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"/>
 
-        <TextView
-            android:id="@+id/add_new_phonenumber"
-            android:layout_width="wrap_content"
+        <EditText
+            android:id="@+id/contact_edit_name"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/add_new"
-            android:textAppearance="@style/Base.TextAppearance.AppCompat.Button"/>
+            />
 
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/email_section"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-
-        <TextView
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:id="@+id/phonenumber_section"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/email_label"
-            android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"/>
+            android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/add_new_email"
-            android:layout_width="wrap_content"
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/phonenumber_label"
+                android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"/>
+
+            <TextView
+                android:id="@+id/add_new_phonenumber"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/add_new"
+                android:textAppearance="@style/Base.TextAppearance.AppCompat.Button"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/email_section"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/add_new"
-            android:textAppearance="@style/Base.TextAppearance.AppCompat.Button"/>
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/email_label"
+                android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"/>
+
+            <TextView
+                android:id="@+id/add_new_email"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/add_new"
+                android:textAppearance="@style/Base.TextAppearance.AppCompat.Button"/>
+
+        </LinearLayout>
 
     </LinearLayout>
 
